add per, add custom spm, add more L1

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -24,9 +24,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('avg_stats.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
-    "df = df[(df.G*df.MP > 48)]\n",
-    "df.shape"
+    "df = pd.read_csv('big_stat.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
+    "df = df[(df.G*df.MP > 100)]\n",
+    "df.shape\n",
+    "#df = df.sample(10000)"
    ]
   },
   {
@@ -64,7 +65,7 @@
     "    X[name + 'p36'] = 36* df[name]/den\n",
     "    X[name + 'p100'] = X[name + 'p36']*4/3\n",
     "\n",
-    "if True:\n",
+    "if False:\n",
     "    X['3PtP'] = (2/(1+np.exp(-X['3PAp100']))-1)*X['3P%']/100\n",
     "    X['Creation'] = X['ASTp100']*0.1843+(X['PTSp100']+X['TOVp100'])*0.0969-2.3021*X['3PtP']+0.0582*(X['ASTp100']*(X['PTSp100']+X['TOVp100'])*X['3PtP'] )-1.1942\n",
     "    X['Load'] = (X['ASTp100']-(0.38*X['Creation'])*0.75)+X['FGAp100']+X['FTAp100']*0.44+X['Creation']+X['TOVp100']\n",
@@ -81,11 +82,17 @@
     "        nname = name.replace('FG','2P')\n",
     "        X[nname] = X[name] - X[name3]\n",
     "        print(name)\n",
-    "        \n",
+    "#else:\n",
+    "X['PER'] = df['PER']\n",
+    "    #X['DREO'] = X['PTSp100'] + .2*X['TRBp100'] + .5*X['ASTp100'] - .9*X['FGAp100'] - .35*X['FTAp100']-6.23\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
-    "X = X[[_ for _ in X.columns if '%A' in _ or _[-1]=='r' or \"+/-\" in _ or 'p36' in _ or _ in (['DRE','FT%','OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
-    "if False:\n",
+    "#'PER','FG%','DREO'\n",
+    "X['OSPM']= X['PTSp36']*0.15 +  X['FTAp36']*0.03 +  X['ASTp36']*0.12 +  X['TRBp36']*0.09 \\\n",
+    "          -X['FTp36']*0.10 -  X['FGAp36']*0.06 -X['FGp36']*0.24 -0.92\n",
+    "\n",
+    "X = X[[_ for _ in X.columns if '%A' in _ or _[-1]=='r' or \"+/-\" in _ or 'p36' in _ or _ in (['OSPM','PER','DRE','FT%','OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
+    "if True:\n",
     "    X = X[[_ for _ in X.columns if not '3P' in _]]\n",
     "    X = X[[_ for _ in X.columns if not 'Rim' in _]]\n",
     "    X = X[[_ for _ in X.columns if not 'Post' in _]]\n",
@@ -99,6 +106,9 @@
     "    X = X[[_ for _ in X.columns if not 'OPM' in _]]\n",
     "    X = X[[_ for _ in X.columns if not 'BPM' in _]]\n",
     "    X = X[[_ for _ in X.columns if not '+/-' in _]]\n",
+    "else:\n",
+    "    X = X[[_ for _ in X.columns if not 'FG%' in _]]\n",
+    "\n",
     "#X = X[[_ for _ in X.columns if not '3PAr' in _]]\n",
     "\n",
     "replacement_filter = (df.Salary > 0.5) & (df.Salary < 1.0)\n",
@@ -123,7 +133,8 @@
    "outputs": [],
    "source": [
     "np.round(replacement_player_std_r).astype(np.int)\n",
-    "_ =  plt.hist(X['DRE'],150)"
+    "_ =  plt.hist(X['OSPM'],150)\n",
+    "X['OSPM'].mean()"
    ]
   },
   {
@@ -135,10 +146,19 @@
     "from sklearn import neural_network\n",
     "from sklearn import linear_model\n",
     "from sklearn import preprocessing\n",
-    "from sklearn import feature_selection\n",
+    "from sklearn import feature_selection, model_selection\n",
     "from sklearn import  multioutput\n",
     "from sklearn import ensemble\n",
     "from sklearn import svm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#np.array([cc.alpha_ for cc in clf.estimators_]).mean()"
    ]
   },
   {
@@ -152,7 +172,31 @@
     "scalery = preprocessing.StandardScaler()\n",
     "prescale_X = scalerX.fit_transform(X)\n",
     "prescale_y = scalery.fit_transform(y)\n",
-    "prescale_X = fexp.fit_transform(prescale_X)"
+    "prescale_X = fexp.fit_transform(prescale_X)\n",
+    "X_train, X_test, y_train, y_test = model_selection.train_test_split(prescale_X, prescale_y, test_size=0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alphas = [0.0027970399058284225,\n",
+    " 0.0010260119525042856,\n",
+    " 0.0018565681404553416,\n",
+    " 0.001546097199032342,\n",
+    " 0.00181707020547193,\n",
+    " 0.0010257355518965446,\n",
+    " 0.0010795222890711558,\n",
+    " 0.005913268870169993,\n",
+    " 0.0059244781808397125,\n",
+    " 0.006696280944494202,\n",
+    " 0.002864408658370878,\n",
+    " 0.001778346344053557,\n",
+    " 0.0033815611873227974,\n",
+    " 0.003758229571404169,\n",
+    " 0.0013587480128740615]"
    ]
   },
   {
@@ -167,9 +211,11 @@
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
     "    #clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=5e2,tol=1e-9)\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=5e2,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
-    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=5e-3))\n",
+    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=5e-3,l1_ratio=0.5))\n",
     "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
     "    #clf = multioutput.MultiOutputRegressor(svm.SVR())\n",
+    "    #clf.fit(X_train,y_train)\n",
+    "    #print(clf.score(X_train,y_train),clf.score(X_test,y_test))\n",
     "    clf.fit(prescale_X,prescale_y)\n",
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
     "    err = np.linalg.norm(yt-y)\n",
@@ -227,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2019\n",
+    "GEN_YEAR = 1968\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -440,7 +486,7 @@
     "            ('FG','per_game'),('FGA','per_game'),('3P','per_game'),('3PA','per_game'),('3P%','totals'),\n",
     "            ('FT','per_game'),('ORB','per_game'),('TRB','per_game'),('FT%','totals'),\n",
     "            ('FTA','per_game'),('DRB','per_game'),('AST','per_game'),('2P','per_game'),('2PA','per_game'),\n",
-    "            ('STL','per_game'),('TOV','per_game'),('Blk','per_game','BLK'),\n",
+    "            ('STL','per_game'),('TOV','per_game'),('Blk','per_game','BLK'),('PER','advanced'),\n",
     "            ('PF','per_game'),('PTS','per_game','PTS/G'),('PER','advanced'),('PTS','per_game','PTS'),\n",
     "            ('OPM','advanced','OBPM'),('BPM','advanced'),('USG%','advanced'),('DPM','advanced','DBPM'),\n",
     "            #('AtRimFGP','totals','2P%'), ('LowPostFGP','totals','2P%'), ('MidRangeFGP','totals','eFG%'),\n",
@@ -465,8 +511,10 @@
     "        for loc in locations:\n",
     "            try:\n",
     "                locs[(ty,team)][loc[0]] = (table_columns[(ty,team)][loc[1]].index(loc[2]),loc[1])\n",
-    "            except:\n",
-    "                pass#pass#print(loc,table_columns[loc[1]])\n",
+    "            except Exception as e:\n",
+    "                #print(e)\n",
+    "                #print(team,ty)\n",
+    "                pass#print(loc,table_columns[loc[1]])\n",
     "    #if 'shooting' in table_columns:\n",
     "    #    l = list(locs['LowPostFGP'])\n",
     "    #    l[0] +=2\n",
@@ -502,7 +550,8 @@
     "            #print(ty,team,name)\n",
     "            for k,v in locs[(ty,team)].items():\n",
     "                try:\n",
-    "                    d[k] = stats[v[1]][0][v[0]]\n",
+    "                    SV = stats[v[1]][0][v[0]]\n",
+    "                    d[k] = 0 if SV == '' else SV\n",
     "                except:\n",
     "                    #print(k,v)\n",
     "                    #print(stats)\n",
@@ -528,19 +577,35 @@
     "                d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
     "                d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
     "                d['BPM'] = d['OPM']+d['DPM']\n",
-    "            player_names.append(name)\n",
-    "            player_years.append(ty)\n",
+    "            #else:\n",
+    "            d['DREO'] = d['PTSp36'] + .2*d['TRBp36'] + .5*d['ASTp36'] - .9*d['FGAp36'] - .35*d['FTAp36']-6.23\n",
+    "            d['OSPM']= d['PTSp36']*0.15 +  d['FTAp36']*0.03 +  d['ASTp36']*0.12 +  d['TRBp36']*0.09 \\\n",
+    "                      -d['FTp36']*0.10 -  d['FGAp36']*0.06 -d['FGp36']*0.24 -0.92\n",
+    "\n",
     "\n",
     "            MP = np.maximum(1,np.nan_to_num(d['MPT']))\n",
-    "            player_scales.append(MP)\n",
     "            player_vectors.append([d[stat] for stat in X.columns])\n",
+    "            player_scales.append(MP)\n",
+    "            player_names.append(name)\n",
+    "            player_years.append(ty)\n",
     "            player_heights.append(d['Hgt'])\n",
     "        except Exception as e:\n",
     "            print(name,team)\n",
     "            print(e)\n",
     "            print(d.keys())\n",
+    "            #if name == 'Bill Bradley':\n",
+    "            #    raise\n",
     "            pass\n",
     "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d['MPT']"
    ]
   },
   {
@@ -570,7 +635,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xn = np.nan_to_num(np.array(player_vectors))\n"
+    "Xn = np.nan_to_num(np.array(player_vectors))\n",
+    "#Xn.shape,Xn_s.shape,prescale_X.shape,fexp.n_input_features_,X.shape"
    ]
   },
   {
@@ -741,12 +807,13 @@
    "outputs": [],
    "source": [
     "new_team = [\n",
-    "        ('CHO','CHA'),\n",
+    "        ('PHX','PHO'),\n",
+    "        ('BKN','BRK'),\n",
+    "        ('CHA','CHO'),\n",
     "        ('NOP','NOH'),\n",
+    "        ('NOH','NOK'),\n",
     "        ('BRK','NJN'),\n",
     "        ('OKC','SEA'),\n",
-    "        ('NOK','NOH'),\n",
-    "        ('NOH','CHH'),\n",
     "        ('MEM','VAN'),\n",
     "        ('WAS','WSB'),\n",
     "        ('SAC','KCK'),\n",
@@ -754,20 +821,23 @@
     "        ('UTA','NOJ'),\n",
     "        ('SDC','BUF'),\n",
     "        ('NJN','NYN'),\n",
+    "        ('NYN','NYA'),\n",
+    "        ('NYA','NJA'),\n",
     "        ('GSW','SFW'),\n",
     "        ('SAS','DLC'),\n",
     "        ('DLC','TEX'),\n",
     "        ('HOU','SDR'),\n",
     "        ('CHA','CHH'),\n",
-    "        ('SAA','TEX'),\n",
     "        ('SAS','SAA'),\n",
+    "        ('SAA','TEX'),\n",
     "        ('DEN','DNA'),\n",
     "        ('DNA','DNR'),\n",
     "        ('WSB','CAP'),\n",
     "        ('CAP','BAL'),\n",
     "        ('BAL','CHZ'),\n",
     "        ('CHZ','CHP'),\n",
-    "        ('SEA','SDS'),\n",
+    "        ('NOH','KEN'),\n",
+    "        ('MIN','SDS'),\n",
     "        ('SDS','SDA'),\n",
     "        ('MIA','FLO'),\n",
     "        ('FLO','MMF'),\n",
@@ -781,15 +851,12 @@
     "        ('SSL','CAR'),\n",
     "        ('CAR','HSM'),\n",
     "        ('DET','FTW'),\n",
-    "        ('MLH','TRI'),\n",
     "        ('ATL','STL'),\n",
     "        ('STL','MLH'),\n",
     "        ('MLH','TRI'),\n",
     "        ('PHI','SYR'),\n",
-    "        ('CIN','ROC'),\n",
     "        ('TOR','PTC'),\n",
     "        ('PTC','PTP'),\n",
-    "        ('MNP','PTP'),\n",
     "        ('PTP','MNP'),\n",
     "        ('VAN','MMS'),\n",
     "        ('MMS','MMT'),\n",
@@ -802,7 +869,10 @@
     "        ('KCK','KCO'),\n",
     "        ('KCO','KCK'),\n",
     "        ('KCK','CIN'),\n",
-    "        ('CIN','ROC'),]\n",
+    "        ('CIN','ROC'),\n",
+    "        ('CHP','BLB'),\n",
+    "        ('IND','INA'),\n",
+    "        ('INA','INO')]\n",
     "st = set()\n",
     "for t in new_team:\n",
     "    st.add(t[0])\n",
@@ -1193,7 +1263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players"
+    "#players"
    ]
   },
   {
@@ -1225,6 +1295,15 @@
    "source": [
     "len(ratings),len(ratings_f),len(ratings)+gen_FA\n",
     "players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max(alphas)"
    ]
   },
   {
