--- a/regress_WAR.ipynb
+++ b/regress_WAR.ipynb
@@ -24,10 +24,123 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('avg_stats.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
-    "df = df[(df.G*df.MP > 48)]\n",
-    "df.shape\n",
-    "df.columns"
+    "df = pd.read_csv('big_stat.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
+    "df = df[(df.G*df.MP > 82)]\n",
+    "df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "V = df[['Name','Ovr']].groupby('Name').max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(V >= 90).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = [76.9,63.9,56.2,50.8,46.6,43.2,40.3,37.8,35.6,33.6,31.8,30.2,28.7,27.3,26,24.8,23.6,22.6,21.5,20.6,19.7,18.8,18,17.2,16.4,15.6,14.9,14.3,13.6,13]\n",
+    "#df = df[df.Season >= 2030]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals2 = []\n",
+    "for i in range(30):\n",
+    "    agg = df[df['DraftPick'] == i+1].groupby('Name').sum()\n",
+    "    agg = agg.mean()\n",
+    "    #print(i,agg['WS'],agg['EWA'])\n",
+    "    vals2.append(agg['WS'])\n",
+    "#_ = plt.hist(['EWA'],20)\n",
+    "plt.plot(np.arange(30)+1,vals,label='NBA')\n",
+    "plt.plot(np.arange(30)+1,vals2,label='BBGM')\n",
+    "plt.xlabel('draft pick')\n",
+    "plt.xlim(1,30)\n",
+    "plt.ylabel('Mean Career Win Shares')\n",
+    "plt.legend()\n",
+    "plt.gca().set_facecolor('w')\n",
+    "#plt.gca().set_facecolor('w')\n",
+    "plt.savefig('draft.png',transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals3 = []\n",
+    "valid_ages = set(list(range(19,36)))\n",
+    "for i in range(19,36):\n",
+    "    agg = df[df['Age'] == i]#.groupby('Name').sum()\n",
+    "    agg = agg.mean()\n",
+    "    #print(i,agg['WS'],agg['EWA'])\n",
+    "    vals3.append(agg['WS/48'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WS_REAL = defaultdict(list)\n",
+    "for YR in range(1980,2020):\n",
+    "    table = np.load('tables_{}.pkl'.format(YR))\n",
+    "    for team in table:\n",
+    "        stats = table[team]['advanced'][['Age','WS/48']]\n",
+    "        for item in stats.itertuples():\n",
+    "            WS_REAL[int(item[1])].append(item[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals4 = np.zeros(len(valid_ages))\n",
+    "for k,v in WS_REAL.items():\n",
+    "    if k in valid_ages:\n",
+    "        try:\n",
+    "            vals4[k-19] = np.array( [ _ for _ in v if type(_) == float ]).mean()\n",
+    "        except:\n",
+    "            print(np.array(v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(range(19,36),vals4,label='NBA')\n",
+    "plt.plot(range(19,36),vals3,label='BBGM')\n",
+    "plt.xlabel('age')\n",
+    "plt.xlim(19,36)\n",
+    "plt.ylabel('Mean WS/48')\n",
+    "plt.legend()\n",
+    "plt.gca().set_facecolor('w')\n",
+    "#plt.gca().set_facecolor('w')\n",
+    "plt.savefig('ws48.png',transparent=False)"
    ]
   },
   {
@@ -39,11 +152,16 @@
     "dkeys = ['Hgt', 'Str', 'Spd', 'Jmp', 'End', 'Ins', 'Dnk', 'FT', '2Pt', '3Pt',\n",
     "       'oIQ', 'dIQ', 'Drb', 'Pss', 'Reb']\n",
     "new_ovr = []\n",
-    "for row in df.iterrows():\n",
-    "    new_ovr.append(sum([row[1][k]*v for k,v in zip(dkeys,nc)])/nc.sum())\n",
+    "nc = np.array([5,1,4,2,1,1,2,1,1,3,7,3,3,3,1])\n",
     "\n",
-    "nc = np.array([7,1,6,1,1,1,2,1,1,1,9,3,6,2,1])\n",
-    "plt.hist(new_ovr)"
+    "new_ovr = np.array(df.iloc[:,-15:]) @ (nc/nc.sum())\n",
+    "#for row in df.iterrows():\n",
+    "#    new_ovr.append(sum([row[1][k]*v for k,v in zip(dkeys,nc)])/nc.sum())\n",
+    "#    break\n",
+    "\n",
+    "plt.hist(new_ovr,100)\n",
+    "print(np.array(new_ovr).mean())\n",
+    "df.columns[-15:]"
    ]
   },
   {
@@ -52,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "row[1]['Ovr']"
+    "df[df['+/-'] < -20]['Ovr']"
    ]
   },
   {
@@ -62,11 +180,11 @@
    "outputs": [],
    "source": [
     "y = df.iloc[:,-18:-17] #45\n",
-    "y.iloc[:,0] += (df.iloc[:,45]-0.074737)*50 #45\n",
-    "y /=2 \n",
+    "#y.iloc[:,0] += (df.iloc[:,45]-0.074737)*50 #45\n",
+    "#y /=2 \n",
     "\n",
     "X = df.iloc[:,-15:] # -17:-16\n",
-    "X = X[[_ for _ in X.columns if _ != '+/-' ]]\n",
+    "#X = X[[_ for _ in X.columns if _ != '+/-' ]]\n",
     "X.columns,y.columns,y.shape"
    ]
   },
@@ -105,7 +223,7 @@
     "scalery = preprocessing.StandardScaler()\n",
     "prescale_X = scalerX.fit_transform(X)\n",
     "prescale_y = scalery.fit_transform(y)\n",
-    "prescale_X = fexp.fit_transform(prescale_X)"
+    "#prescale_X = fexp.fit_transform(prescale_X)"
    ]
   },
   {
@@ -114,15 +232,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## trials = 1\n",
+    "trials = 1\n",
     "ts = []\n",
+    "prescale_X = (X-round(X.mean(0)))/round(X.std(0))\n",
     "for i in range(trials):\n",
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
     "    #clf = neural_network.MLPRegressor((32,4),'identity',solver='lbfgs',alpha=5e2,tol=1e-9)\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=5e2,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
-    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=5,fit_intercept=False))\n",
+    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=5,positive=True,fit_intercept=False))\n",
     "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
     "    #clf = multioutput.MultiOutputRegressor(svm.SVR())\n",
+    "    W = df.MP*df.G\n",
+    "    W /= W.mean()\n",
     "    clf.fit(prescale_X,prescale_y)\n",
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
     "    err = np.linalg.norm(yt-y)\n",
@@ -146,8 +267,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "round(df.iloc[:,-15:].mean()),round(df.iloc[:,-15:].std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "col_names = X.columns\n",
-    "col_names = fexp.get_feature_names(X.columns)\n",
+    "#col_names = fexp.get_feature_names(X.columns)\n",
     "\n",
     "for i,c in enumerate(y.columns):\n",
     "    coeffs = clf.estimators_[i].coef_ \n",
@@ -162,15 +292,6 @@
     "        print('|{:10s}|{:.2f}|'.format(n,100*v/coeffs.sum()))\n",
     "    #for v,n in sorted(coeffs2,reverse=True):\n",
     "    #    print('\\t{:25s}\\t{:.2f}'.format(n,v))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Ovr'].mean(),df['Ovr'].std()"
    ]
   },
   {
@@ -196,8 +317,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2019\n",
-    "with open('auto_roster_{}.json'.format(GEN_YEAR),'r') as fp:\n",
+    "round(X.std(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coeff = clf.estimators_[i].coef_ \n",
+    "coeff = np.round(coeff,2)\n",
+    "coeff[np.where(coeff <= 0)] = 0.01\n",
+    "\n",
+    "pred = (X-round(X.mean(0)))/round(X.std(0)) @ coeff\n",
+    "MM = new_ovr.mean()\n",
+    "SS = new_ovr.std()/pred.std()\n",
+    "print(MM,SS)\n",
+    "\n",
+    "new_ovr = np.array(new_ovr)\n",
+    "plt.hist(new_ovr,100)\n",
+    "plt.hist(pred*SS+MM,100,alpha=0.5)\n",
+    "plt.ylim(0,50)\n",
+    "new_ovr.mean(),new_ovr.std(),coeff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GEN_YEAR = 1988\n",
+    "with open('rosters/auto_roster_{}.json'.format(GEN_YEAR),'r') as fp:\n",
     "    base = json.load(fp)\n",
     "players = base['players']"
    ]
@@ -210,7 +369,9 @@
    "source": [
     "dkeys = [_.lower() for _ in ['Hgt', 'Stre', 'Spd', 'Jmp', 'Endu', 'Ins', 'Dnk', 'FT', 'fg', 'tp',\n",
     "       'oIQ', 'dIQ', 'Drb', 'Pss', 'Reb']]\n",
-    "nc = np.array([7,1,6,1,1,1,2,1,1,1,9,3,6,2,1])"
+    "nc = np.array([5,1,4,2,1,1,2,1,1,3,7,3,3,3,1])\n",
+    "xm = round(X.mean(0))\n",
+    "xs = round(X.std(0))"
    ]
   },
   {
@@ -226,7 +387,7 @@
     "    d = {'name':p['name']}\n",
     "    d.update(p['ratings'][0])\n",
     "    d['ovr_og'] = sum([d[k]*v for k,v in zip(dkeys,nc)])/nc.sum()\n",
-    "    d['ovr_mn'] = sum([d[k]*v for k,v in zip(dkeys,nc_M)])/nc_M.sum()\n",
+    "    d['ovr_mn'] = sum([(d[k]-m)*v/s for k,v,m,s in zip(dkeys,coeff,xm,xs)])*SS + MM\n",
     "    #d['ovr_mnr'] = sum([d[k]*v for k,v in zip(dkeys,nc)])/np.maximum(0,nc3).sum()\n",
     "\n",
     "    player_df.append(d)"
@@ -284,14 +445,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pdf['diff'].mean(),pdf['diff'].std()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10,10))\n",
+    "#plt.scatter(pdf['ovr_og'],pdf['ovr_mn'],s=11,alpha=0.7)\n",
+    "plt.scatter(new_ovr,pred*(SS)+MM+0.5,s=3,alpha=0.1)\n",
+    "\n",
+    "\n",
+    "plt.xlim(30,75)\n",
+    "plt.ylim(30,75)\n",
+    "plt.plot([30,75],[30,75],c='k')\n",
+    "plt.grid(True)"
+   ]
   },
   {
    "cell_type": "code",
