make 2pt equal 3pt for older players

--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -225,8 +225,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('normed.json','wt') as fp:\n",
+    "with open('normed_new.json','wt') as fp:\n",
     "    json.dump(base,fp, indent=4, sort_keys=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[_ for _ in base['players'] if _['firstName'] == 'Zion']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[_ for _ in base['players'] if _['firstName'] == 'Zion']"
    ]
   },
   {
