--- a/design_spm.ipynb
+++ b/design_spm.ipynb
@@ -33,7 +33,8 @@
     "for YR in range(1997,2014):\n",
     "    table = np.load('tables_{}.pkl'.format(YR))\n",
     "    for team in table:\n",
-    "        stats = table[team]['per_minute'][COLS]\n",
+    "        stats = table[team]['per_minute'][COLS].replace('',0)\n",
+    "        stats['PTS'] -= table[team]['per_minute']['3P'].replace('',0)\n",
     "        for item in stats.itertuples():\n",
     "            WS_REAL[item[0].lower()].append(item[1:])"
    ]
@@ -108,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fexp = preprocessing.PolynomialFeatures(degree=,interaction_only=False)\n",
+    "fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=False)\n",
     "scalerX = preprocessing.StandardScaler()\n",
     "scalery = preprocessing.StandardScaler()\n",
     "prescale_X = scalerX.fit_transform(X)\n",
@@ -186,6 +187,20 @@
    "source": [
     "clf.score(prescale_X,y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
