--- a/merge_roster.ipynb
+++ b/merge_roster.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_roster = '2019-20.NBA.Roster.json'\n",
-    "settings_roster = 'rosters/auto_roster_2019.json'\n"
+    "base_roster = 'normed_new.json'\n",
+    "settings_roster = 'auto_roster_2019.json'\n"
    ]
   },
   {
@@ -68,7 +68,11 @@
     "    nsplit = name.split(' ')\n",
     "    if nsplit[-1] in ['Jr','Sr','III','II','Jr.','Sr.']:\n",
     "        name = ' '.join(nsplit[:-1])\n",
-    "    if name.lower() in new_settings:\n",
+    "    if name.lower() in new_settings :\n",
+    "        if  new_settings[name.lower()]['tid'] < -1:\n",
+    "            #print('skipped',name)\n",
+    "            print(p['ratings'])\n",
+    "            continue\n",
     "        p['ratings'] = new_settings[name.lower()]['ratings']\n",
     "    else:\n",
     "        print(name)"
@@ -80,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('updated_roster.json','wt') as fp:\n",
+    "with open('updated_roster_playoff.json','wt') as fp:\n",
     "    json.dump(base,fp)"
    ]
   },
