--- a/regress_WAR.ipynb
+++ b/regress_WAR.ipynb
@@ -170,7 +170,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df['+/-'] < -20]['Ovr']"
+    "plt.hist(df[df['+/-'] < -12]['Ovr'],15,density=True,label='Below -10',alpha=0.9)\n",
+    "plt.hist(df[df['+/-'] > +12]['Ovr'],15,density=True,label='Above +10',alpha=0.9)\n",
+    "plt.legend()"
    ]
   },
   {
@@ -355,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 1988\n",
+    "GEN_YEAR = 2019\n",
     "with open('rosters/auto_roster_{}.json'.format(GEN_YEAR),'r') as fp:\n",
     "    base = json.load(fp)\n",
     "players = base['players']"
@@ -428,7 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf.sort_values(['diff'],0,False)\n"
+    "pdf.sort_values(['diff'],0,False)\n",
+    "#pdf.loc['Draymond Green']"
    ]
   },
   {
@@ -455,13 +458,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10,10))\n",
-    "#plt.scatter(pdf['ovr_og'],pdf['ovr_mn'],s=11,alpha=0.7)\n",
-    "plt.scatter(new_ovr,pred*(SS)+MM+0.5,s=3,alpha=0.1)\n",
+    "plt.figure(figsize=(6,6))\n",
+    "plt.scatter(pdf['ovr_og'],pdf['ovr_mn'],s=11,alpha=0.7)\n",
+    "#plt.scatter(new_ovr,pred*(SS)+MM+0.5,s=3,alpha=0.1)\n",
     "\n",
     "\n",
     "plt.xlim(30,75)\n",
     "plt.ylim(30,75)\n",
+    "plt.xlabel('old rating')\n",
+    "plt.ylabel('new rating')\n",
+    "plt.title(\"Rating change on 18-19 NBA Roster data\")\n",
     "plt.plot([30,75],[30,75],c='k')\n",
     "plt.grid(True)"
    ]
