--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -36,15 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = df.iloc[:,-15:]\n",
-    "X = df.iloc[:,11:-17]\n",
-    "#y = y[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
-    "print(X.shape)\n",
-    "#X = X[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
-    "print(X.shape)\n",
     "\n",
-    "X['MP'] = df.MP\n",
-    "X['Hgt'] = df['Hgt']\n",
     "df.columns\n"
    ]
   },
@@ -54,6 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "y = df.iloc[:,-15:]\n",
+    "X = df.iloc[:,11:-17]\n",
+    "#y = y[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
+    "print(X.shape)\n",
+    "#X = X[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
+    "print(X.shape)\n",
+    "\n",
+    "X['MP'] = df.MP\n",
+    "X['Hgt'] = df['Hgt']\n",
+    "\n",
     "stat_list = ['FG','FGA','3P',\"3PA\",'FT','FTA',\\\n",
     "             'ORB','DRB','TRB','AST','TOV','STL',\"Blk\",\\\n",
     "             'PF','PTS']\n",
@@ -82,14 +84,18 @@
     "        nname = name.replace('FG','2P')\n",
     "        X[nname] = X[name] - X[name3]\n",
     "        print(name)\n",
+    "else:\n",
+    "    X['PTSp36'] -= X['3Pp36']\n",
+    "    X['OSPM']= X['FGp36']*0.23 +  X['FTp36']*0.13 +  X['ASTp36']*0.12 +  X['TRBp36']*0.08 \\\n",
+    "          + X['FTAp36']*0.02 -  X['FGAp36']*0.05 -X['PTSp36']*0.09 -X['PFp36']*0.01 -1.92\n",
     "#else:\n",
     "X['PER'] = df['PER']\n",
     "    #X['DREO'] = X['PTSp100'] + .2*X['TRBp100'] + .5*X['ASTp100'] - .9*X['FGAp100'] - .35*X['FTAp100']-6.23\n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
     "#'PER','FG%','DREO'\n",
-    "X['OSPM']= X['PTSp36']*0.15 +  X['FTAp36']*0.03 +  X['ASTp36']*0.12 +  X['TRBp36']*0.09 \\\n",
-    "          -X['FTp36']*0.10 -  X['FGAp36']*0.06 -X['FGp36']*0.24 -0.92\n",
+    "\n",
+    "\n",
     "\n",
     "X = X[[_ for _ in X.columns if '%A' in _ or _[-1]=='r' or \"+/-\" in _ or 'p36' in _ or _ in (['OSPM','PER','DRE','FT%','OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
     "if True:\n",
@@ -125,6 +131,13 @@
     "\n",
     "X.columns\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -273,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 1968\n",
+    "GEN_YEAR = 1975\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -385,7 +398,7 @@
    "outputs": [],
    "source": [
     "# add playoff data to normal data\n",
-    "if False:\n",
+    "if True:\n",
     "    for ty in tyear:\n",
     "        for player in player_stats[ty]:\n",
     "            for table_in in player_stats[ty][player]:\n",
@@ -568,6 +581,9 @@
     "            except:\n",
     "                d['Age']=np.random.randint(25,35)\n",
     "\n",
+    "            if ty < 1980 and '3Pp36' in d:\n",
+    "                d['PTSp36'] -= d['3Pp36']\n",
+    "\n",
     "            if '3PAp100' in d:\n",
     "                d['DRE'] = -8.4+ 0.8*d['PTSp100'] -0.7*(d['FGAp100']-d['3PAp100']) -0.6*d['3PAp100'] - 0.2*d['FTp100'] + 0.1*d['ORBp100'] + 0.4*d['DRBp100'] + 0.5*d['ASTp100'] + 1.7*d['STLp100'] + 0.8*d['Blkp100'] - 1.4*d['TOVp100'] - 0.1*d['PFp100']\n",
     "                d['3PtP'] = (2/(1+np.exp(-d['3PAp100']))-1)*d['3P%']\n",
@@ -577,7 +593,6 @@
     "                d['DPM'] = d['Blkp100']*0.802+d['DRBp100']*0.42-4.7-0.07551*d['PFp100']+1.597019*d['STLp100']-0.26385*d['TOVp100']\n",
     "                d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
     "                d['BPM'] = d['OPM']+d['DPM']\n",
-    "            #else:\n",
     "            d['DREO'] = d['PTSp36'] + .2*d['TRBp36'] + .5*d['ASTp36'] - .9*d['FGAp36'] - .35*d['FTAp36']-6.23\n",
     "            d['OSPM']= d['PTSp36']*0.15 +  d['FTAp36']*0.03 +  d['ASTp36']*0.12 +  d['TRBp36']*0.09 \\\n",
     "                      -d['FTp36']*0.10 -  d['FGAp36']*0.06 -d['FGp36']*0.24 -0.92\n",
@@ -605,7 +620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d['MPT']"
+    "d"
    ]
   },
   {
