--- a/song_roster.ipynb
+++ b/song_roster.ipynb
@@ -11,6 +11,8 @@
     "import json\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
+    "import scipy.stats\n",
+    "import scipy.optimize\n",
     "from collections import defaultdict"
    ]
   },
@@ -112,7 +114,7 @@
     "\n",
     "\n",
     "\n",
-    "X = X[[_ for _ in X.columns if '%A' in _ or _[-1]=='r' or \"+/-\" in _ or 'p36' in _ or _ in (['OSPM','DRE','OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
+    "X = X[[_ for _ in X.columns if '%A' in _ or _[-1]=='r' or \"+/-\" in _ or 'p36' in _ or _ in (['PER','OSPM','DRE','OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
     "if True:\n",
     "    X = X[[_ for _ in X.columns if not '3P' in _]]\n",
     "    X = X[[_ for _ in X.columns if not 'Rim' in _]]\n",
@@ -239,7 +241,52 @@
     " 'audio_valence': 'FTr'}\n",
     "\n",
     "inv_lookup = {v: list(adf.columns).index(k) for k,v in stat_lookup.items()}\n",
-    "inv_lookup"
+    "# 35\n",
+    "inv_lookup = {'FTr': 5,\n",
+    " 'MP': 0,\n",
+    " 'FGp36': 10,\n",
+    " 'FGAp36': 1,\n",
+    " 'FTp36': 12,\n",
+    " 'FTAp36': 9,\n",
+    " 'TRBp36': 11,\n",
+    " 'ASTp36': 3,\n",
+    " 'PFp36': 7,\n",
+    " 'PTSp36': 14}\n",
+    "# spearman\n",
+    "inv_lookup = {'FTr': 11,\n",
+    " 'MP': 0,\n",
+    " 'FGp36': 1,\n",
+    " 'FGAp36': 6,\n",
+    " 'FTp36': 14,\n",
+    " 'FTAp36': 4,\n",
+    " 'TRBp36': 10,\n",
+    " 'ASTp36': 9,\n",
+    " 'PFp36': 12,\n",
+    " 'PTSp36': 3}\n",
+    "# inv_lookup PER spearman\n",
+    "inv_lookup = {'PER': 0,\n",
+    " 'FTr': 10,\n",
+    " 'MP': 14,\n",
+    " 'FGp36': 11,\n",
+    " 'FGAp36': 12,\n",
+    " 'FTp36': 8,\n",
+    " 'FTAp36': 6,\n",
+    " 'TRBp36': 3,\n",
+    " 'ASTp36': 7,\n",
+    " 'PFp36': 4,\n",
+    " 'PTSp36': 2}\n",
+    "# per pearson\n",
+    "inv_lookup = {'PER': 0,\n",
+    " 'FTr': 11,\n",
+    " 'MP': 12,\n",
+    " 'FGp36': 9,\n",
+    " 'FGAp36': 6,\n",
+    " 'FTp36': 10,\n",
+    " 'FTAp36': 8,\n",
+    " 'TRBp36': 4,\n",
+    " 'ASTp36': 1,\n",
+    " 'PFp36': 14,\n",
+    " 'PTSp36': 2}"
    ]
   },
   {
@@ -263,8 +310,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "Xn = np.nan_to_num(np.array(player_vectors))\n",
-    "scalerX2 = preprocessing.RobustScaler()#quantile_range=(30.0, 70.0))\n",
+    "scalerX2 = preprocessing.RobustScaler(quantile_range=(35.0, 65.0))\n",
     "scalerX2.fit(Xn)\n",
     "Xn_s =scalerX2.transform(np.nan_to_num(Xn))\n",
     "Xn_fs = fexp.transform(np.nan_to_num(Xn_s))\n",
@@ -360,8 +408,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('music_{}.json'.format('spotify'),'wt') as fp:\n",
+    "with open('music_{}.json'.format('spotifyAUTO'),'wt') as fp:\n",
     "    json.dump(base,fp, sort_keys=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adf[adfs.countD >5].sort_values('song_popularity',0,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adfs.sort_values('song_popularity',0,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_obj(x):\n",
+    "    x_ord = np.argsort(x)\n",
+    "    inv_lookup = {v: _ for v,_ in zip(X.columns,x_ord[:len(stat_lookup)])}\n",
+    "    player_vectors = []\n",
+    "    player_names = []\n",
+    "    for i,row in enumerate(adf.itertuples()):\n",
+    "        if adfs.countD[i] < 5:\n",
+    "            continue\n",
+    "        player_vectors.append([row[inv_lookup[stat]+1] for stat in X.columns])\n",
+    "        player_names.append(row[0])\n",
+    "    Xn = np.nan_to_num(np.array(player_vectors))\n",
+    "    scalerX2 = preprocessing.RobustScaler()#quantile_range=(30.0, 70.0))\n",
+    "    scalerX2.fit(Xn)\n",
+    "    Xn_s =scalerX2.transform(np.nan_to_num(Xn))\n",
+    "    Xn_fs = fexp.transform(np.nan_to_num(Xn_s))\n",
+    "    predict = clf.predict(Xn_fs)\n",
+    "    ratings = np.nan_to_num(scalery.inverse_transform(predict))\n",
+    "    nc2 = np.array([5,1,4,2,1,1,2,1,1,3,7,3,3,3,1])/38\n",
+    "    ovr = np.clip(ratings,0,100) @ nc2\n",
+    "    return -scipy.stats.pearsonr(ovr,adfs[adfs.countD >= 5]['song_popularity'])[0]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#res = scipy.optimize.differential_evolution(map_obj,[(0,1) for i in adf.columns],disp=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_x = np.random.rand(len(adf.columns))\n",
+    "best_v = map_obj(best_x)\n",
+    "for i in range(1000):\n",
+    "    x = np.random.rand(len(adf.columns))\n",
+    "    v = map_obj(x)\n",
+    "    if v < best_v:\n",
+    "        best_x = x\n",
+    "        best_v = v\n",
+    "        print(best_v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_ord = np.argsort(best_x)\n",
+    "inv_lookup = {v: _ for v,_ in zip(X.columns,x_ord[:len(stat_lookup)])}\n",
+    "inv_lookup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inv_lookup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_obj(best_x)"
    ]
   },
   {
