--- a/MP.ipynb
+++ b/MP.ipynb
@@ -6,6 +6,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_csv('big_stat.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_stats = defaultdict(dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for row in df[(df.DraftPick == 2) & (df.Age <= 22)].itertuples():\n",
+    "    min_stats[row[2]][row[5]] = row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = []\n",
+    "for name, val in min_stats.items():\n",
+    "    miny = min(val.keys())\n",
+    "    rows.append(val[miny])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.round(np.array([_[-17:] for _ in rows]).mean(0)).astype(np.int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'Ovr=74, Pot=83, Hgt=57, Str=65, Spd=84, Jmp=82, End=50, Ins=50, Dnk=51, _69=73, _70=62, _71=67, oIQ=59, dIQ=60, Drb=88, Pss=75, Reb=45'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(min_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(','.join([_.split('=')[0] for _ in s.split(', ')]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
     "import pickle\n",
     "from collections import defaultdict\n",
@@ -21,7 +97,7 @@
    "outputs": [],
    "source": [
     "dfs = []\n",
-    "for i in range(2000,2020):\n",
+    "for i in range(1990,2020):\n",
     "    dfs.append(np.load('tables_{}.pkl'.format(i)))"
    ]
   },
@@ -67,7 +143,7 @@
     "    try:\n",
     "        #print(v)\n",
     "        c = False\n",
-    "        for j in range(1,min(len(v),15)):\n",
+    "        for j in range(1,min(len(v),20)):\n",
     "            mp = sum([v[k][0] for k in range(0,j)])\n",
     "            #print(v,j)\n",
     "            data.append((mp,v[j][1]-v[j-1][1]))\n",
